--- a/Project/test-output/old/Default suite/methods-alphabetical.html
+++ b/Project/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67b4ec">  <td>20/02/19 07:54:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Create_Collections.Create_Collection()[pri:0, instance:com.CloudApp_Project.Create_Collections@338b49d3]">Create_Collection</td> 
-  <td>main@775093282</td>   <td></td> </tr>
-<tr bgcolor="7e788f">  <td>20/02/19 07:53:48</td>   <td>-19134</td> <td>&nbsp;</td><td title="&gt;&gt;Base_Class.Openbrowser()[pri:0, instance:com.CloudApp_Project.Create_Collections@338b49d3]">&gt;&gt;Openbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775093282</td>   <td></td> </tr>
-<tr bgcolor="7e788f">  <td>20/02/19 07:54:24</td>   <td>16975</td> <td>&nbsp;</td><td title="&lt;&lt;Base_Class.closebrowser()[pri:0, instance:com.CloudApp_Project.Create_Collections@338b49d3]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775093282</td>   <td></td> </tr>
-<tr bgcolor="7e788f">  <td>20/02/19 07:53:59</td>   <td>-7604</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.login()[pri:0, instance:com.CloudApp_Project.Create_Collections@338b49d3]">&gt;&gt;login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775093282</td>   <td></td> </tr>
-<tr bgcolor="7e788f">  <td>20/02/19 07:54:22</td>   <td>14944</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.logout()[pri:0, instance:com.CloudApp_Project.Create_Collections@338b49d3]">&lt;&lt;logout</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775093282</td>   <td></td> </tr>
+<tr bgcolor="90a469">  <td>20/02/27 08:22:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base_Class.Openbrowser()[pri:0, instance:test_Suite.Rename_Drop@e76b097]">&gt;&gt;Openbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@723310524</td>   <td></td> </tr>
+<tr bgcolor="d4a7d6">  <td>20/02/27 08:22:34</td>   <td>24515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Rename_Drop.Rename_The_Drop()[pri:0, instance:test_Suite.Rename_Drop@e76b097]">Rename_The_Drop</td> 
+  <td>main@723310524</td>   <td></td> </tr>
+<tr bgcolor="90a469">  <td>20/02/27 08:22:39</td>   <td>29477</td> <td>&nbsp;</td><td title="&lt;&lt;Base_Class.closebrowser()[pri:0, instance:test_Suite.Rename_Drop@e76b097]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@723310524</td>   <td></td> </tr>
+<tr bgcolor="90a469">  <td>20/02/27 08:22:26</td>   <td>16219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.login()[pri:0, instance:test_Suite.Rename_Drop@e76b097]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@723310524</td>   <td></td> </tr>
+<tr bgcolor="90a469">  <td>20/02/27 08:22:35</td>   <td>25306</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.logout()[pri:0, instance:test_Suite.Rename_Drop@e76b097]">&lt;&lt;logout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@723310524</td>   <td></td> </tr>
 </table>
