--- a/Project/test-output/old/Suite/methods-not-run.html
+++ b/Project/test-output/old/Suite/methods-not-run.html
@@ -1,4 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.final_project.Base_class.OpenBrowser</td></tr>
-<tr><td>com.final_project.Base_class.closebrowser</td></tr>
+<tr><td>object_Repository.Base_Class.Openbrowser</td></tr>
+<tr><td>object_Repository.Base_Class.Openbrowser</td></tr>
+<tr><td>object_Repository.Base_Class.closebrowser</td></tr>
+<tr><td>object_Repository.Base_Class.closebrowser</td></tr>
 </table>
