--- a/Project/test-output/old/Suite/methods.html
+++ b/Project/test-output/old/Suite/methods.html
@@ -1,20 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6db3b2">  <td>20/01/26 12:26:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base_class.OpenBrowser()[pri:0, instance:com.batchexecution.Customer@184cf7cf]">&gt;&gt;OpenBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
-<tr bgcolor="6db3b2">  <td>20/01/26 12:26:37</td>   <td>7069</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_class.login()[pri:0, instance:com.batchexecution.Customer@184cf7cf]">&gt;&gt;login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
-<tr bgcolor="b965f2">  <td>20/01/26 12:26:38</td>   <td>7561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Customer.creationCustomer()[pri:0, instance:com.batchexecution.Customer@184cf7cf]">creationCustomer</td> 
-  <td>main@1624820151</td>   <td></td> </tr>
-<tr bgcolor="6db3b2">  <td>20/01/26 12:26:41</td>   <td>10759</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_class.logout()[pri:0, instance:com.batchexecution.Customer@184cf7cf]">&lt;&lt;logout</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
-<tr bgcolor="6db3b2">  <td>20/01/26 12:26:41</td>   <td>11099</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_class.login()[pri:0, instance:com.batchexecution.project@2fd6b6c7]">&gt;&gt;login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
-<tr bgcolor="a9af70">  <td>20/01/26 12:26:41</td>   <td>11500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project.creationproject()[pri:0, instance:com.batchexecution.project@2fd6b6c7]">creationproject</td> 
-  <td>main@1624820151</td>   <td></td> </tr>
-<tr bgcolor="6db3b2">  <td>20/01/26 12:26:44</td>   <td>14411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_class.logout()[pri:0, instance:com.batchexecution.project@2fd6b6c7]">&lt;&lt;logout</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
-<tr bgcolor="6db3b2">  <td>20/01/26 12:26:45</td>   <td>14720</td> <td>&nbsp;</td><td title="&lt;&lt;Base_class.closebrowser()[pri:0, instance:com.batchexecution.Customer@184cf7cf]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:17:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base_Class.Openbrowser()[pri:0, instance:test_Suite.Create_Collections@3b07a0d6]">&gt;&gt;Openbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:18:11</td>   <td>14071</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.login()[pri:0, instance:test_Suite.Create_Collections@3b07a0d6]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="b965f2">  <td>20/02/27 08:18:19</td>   <td>21773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Create_Collections.Create_Collection()[pri:0, instance:test_Suite.Create_Collections@3b07a0d6]">Create_Collection</td> 
+  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:18:19</td>   <td>21780</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.logout()[pri:0, instance:test_Suite.Create_Collections@3b07a0d6]">&lt;&lt;logout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:18:19</td>   <td>21787</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.login()[pri:0, instance:test_Suite.Rename_Drop@11a9e7c8]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="a9af70">  <td>20/02/27 08:18:29</td>   <td>32221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Rename_Drop.Rename_The_Drop()[pri:0, instance:test_Suite.Rename_Drop@11a9e7c8]">Rename_The_Drop</td> 
+  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:18:29</td>   <td>32228</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.logout()[pri:0, instance:test_Suite.Rename_Drop@11a9e7c8]">&lt;&lt;logout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:18:29</td>   <td>32230</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.login()[pri:0, instance:test_Suite.Sign_Up_Your_Team@3901d134]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="9ad2e3">  <td>20/02/27 08:18:30</td>   <td>32375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sign_Up_Your_Team.createteam()[pri:0, instance:test_Suite.Sign_Up_Your_Team@3901d134]">createteam</td> 
+  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:18:30</td>   <td>32386</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.logout()[pri:0, instance:test_Suite.Sign_Up_Your_Team@3901d134]">&lt;&lt;logout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/02/27 08:18:30</td>   <td>32388</td> <td>&nbsp;</td><td title="&lt;&lt;Base_Class.closebrowser()[pri:0, instance:test_Suite.Create_Collections@3b07a0d6]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052245076</td>   <td></td> </tr>
 </table>
