--- a/Project/test-output/old/Default suite/classes.html
+++ b/Project/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test_Cases.Create_Collections</td>
+<td>test_Suite.Create_Collections</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
